# HelloJADE-desktopFinal

./: .gitignore  DEMARRAGE_RAPIDE_ZADARMA.md  Dockerfile.frontend  GUIDE_CONFIGURATION_ZADARMA.md  GUIDE_FREESWITCH_ZADARMA.md  GUIDE_JADE.md  README.md  call-with-speech-final.ps1  config.yml  docker-compose.yml  index.html  install-freeswitch-portable-fixed.ps1  install-freeswitch-simple-corrected.ps1  package-lock.json  package.json  start-freeswitch-working.ps1  test-call-to-user.ps1  vite.config.ts
asterisk/etc/asterisk/: ari.conf  asterisk.conf  extensions.conf  manager.conf  modules.conf  pjsip.conf
backend/: Dockerfile  package-lock.json  package.json
backend/src/: server.js
backend/src/routes/: auth.js  calls.js  monitoring.js  patients.js
backend/src/services/: AsteriskService.js  FreeSwitchMedicalService.js  OllamaService.js  WhisperService.js  freeswitch-service.js
database/: init.sql
rasa/: config.yml  domain.yml
rasa/.config/rasa/: global.yml
rasa/.rasa/cache/: cache.db
rasa/actions/: __init__.py  actions.py  requirements.txt
rasa/data/: nlu.yml  stories.yml
scripts/: start-hellojade.ps1  start-hellojade.sh  test-jade-system.ps1
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: TestNavigation.vue
src/components/calls/: CallInProgressIndicator.vue  CallStats.vue  CallSummaryModal.vue  (+3 more)
src/router/: index.ts
src/stores/: app.ts  auth.ts  calls.ts
src/views/: AdminView.vue  CallsView.vue  DashboardView.vue  LoginView.vue  MonitoringView.vue  PatientsView.vue  TestCallsView.vue
(+24 files in other folders)
